...
        ])

        setupHomeContent()
        setupSearchContent()
        setSearchMode(false)

        accessibilityIdentifier = "homeScreen"
        locationButton.accessibilityIdentifier = "home.locationButton"
        searchInputView.accessibilityIdentifier = "home.searchInput"
        homeCollectionView.accessibilityIdentifier = "home.libraryCollection"
        searchBooksCollectionView.accessibilityIdentifier = "home.search.bookCollection"
        searchLibrariesCollectionView.accessibilityIdentifier = "home.search.libraryCollection"
        likeButton.accessibilityIdentifier = "home.likesButton"
        alertButton.accessibilityIdentifier = "home.alertsButton"
        profileButton.accessibilityIdentifier = "home.profileButton"
    }

    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

...
