...
            librariesLoadingView.topAnchor.constraint(equalTo: librariesCollectionView.topAnchor),
            librariesLoadingView.leadingAnchor.constraint(equalTo: librariesCollectionView.leadingAnchor),
            librariesLoadingView.trailingAnchor.constraint(equalTo: librariesCollectionView.trailingAnchor),
            librariesLoadingView.bottomAnchor.constraint(equalTo: librariesCollectionView.bottomAnchor)
        ])

        accessibilityIdentifier = "searchScreen"
        backButton.accessibilityIdentifier = "search.backButton"
        librariesCollectionView.accessibilityIdentifier = "search.libraryCollection"
        booksCollectionView.accessibilityIdentifier = "search.bookCollection"
    }

    required init?(coder: NSCoder) {
        fatalError("init(coder:) has not been implemented")
    }

...
